# alimante

./: .dockerignore  .gitignore  .pre-commit-config.yaml  COMPONENT_CONNECTIONS_REPORT.md  Dockerfile  Dockerfile.test  HARDCODED_VALUES_ANALYSIS.md  License  MISE_A_JOUR_SYSTEME.md  PHASE1_COMPLETION_REPORT.md  PHASE2_COMPLETION_REPORT.md  PLANIFICATION_PROJET.md  README.md  README_ALIMANTE.md  README_test_led.md  Readme.md  TEST_MATERIEL.md  activate_spi.py  alimante_main.py  alimante_menu.py  alimante_menu_font.py  analyse_cablage.py  analyze_component_connections.py  cleanup_gpio.py  config_alimante.py  debug_terrarium.py  debug_web_issue.py  diagnostic_complet.py  diagnostic_ecran_psi.py  diagnostic_gpio.py  docker-compose.yml  fix_all_issues.sh  fix_dependencies.sh  guide_branchements_st7735.py  install_dependencies.py  install_dev.sh  install_encoder_libs.py  install_prod.sh  install_raspberry.sh  install_raspberry_pi_dependencies.sh  (+106 more)
.github/workflows/: ci.yml
config/: classification_reference.json  config.json  esp32_communication.json  family_limits.json  gpio_config.json  gpio_config_no_hardware.json  hardcoded_values.json  logging.yaml  network.json  pin_config.json  safety_limits.json  ui_config.json
config/policies/: feeding_policy.json  humidity_policy.json  lighting_policy.json  ventilation_policy.json
config/terrariums/: template_terrarium_02.json  terrarium_default.json  terrarium_esp32_template.json
docs/: DOUBLE_TRAP_SYSTEM.md  MISE_A_JOUR_SYSTEME.md  fan_management_guide.md  gpio_config_refactoring.md  logging_guide.md  pcf8591_integration.md  wiring_guide.md
mobile/: README.md
scripts/: fix_dependencies.sh  fix_imports.sh  verify_zero2w.sh
src/: __init__.py
src/api/: __init__.py  app.py  models.py  rest_api.py  web_server.py
src/controllers/: __init__.py  actuator_controller.py  air_quality_controller.py  base_controller.py  buzzer_controller.py  camera_controller.py  device_controller.py  fan_controller.py  feeding_controller.py  humidity_controller.py  lcd_menu_controller.py  light_controller.py  main_controller.py  radiator_temp_controller.py  sensor_controller.py  temperature_controller.py  ultrasonic_mist_controller.py  water_level_controller.py
src/loops/: __init__.py  main_loop.py  watchdog.py
src/models/: metrics.py
src/services/: __init__.py  alert_service.py  analytics_service.py  auth_service.py  backup_service.py  camera_service.py  component_control_service.py  config_service.py  control_service.py  feeding_service.py  gpio_config_service.py  health_check_service.py  heating_service.py  humidification_service.py  lighting_service.py  monitoring_service.py  monitoring_service_simple.py  notification_service.py  persistence_service.py  recovery_service.py  safety_service.py  scheduler_service.py  sensor_service.py  snapshot_service.py  streaming_service.py  sync_service.py  (+5 more)
tests/: README.md  README_TESTS.md  __init__.py  alimante_menu.py  alimante_menu_fixed.py  alimante_menu_improved.py  analyze_function_categories.py  analyze_orphaned_events.py  analyze_orphaned_functions.py  check_system_coherence.py  component_test.py  install_dependencies.sh  pin_config.json  run_all_tests.py  test_alimante_final.py  test_architecture.py  test_controllers.py  test_controllers_raspberry_pi.py  test_event_system.py  test_gpio.py  test_humidity_controller.py  test_integration_complete.py  test_main.py  test_orphaned_events.py  test_performance.py  test_physical_components.py  test_safety_system.py  test_serial_manager.py  test_servo_transducer_safe.py  test_system.py  test_system_integration.py  test_temperature_controller.py
(+77 files in other folders)
